--- a/exec/포팅매뉴얼.md
+++ b/exec/포팅매뉴얼.md
@@ -120,32 +120,8 @@ docker run -d --name react \
 ```
 
 ### 외부 서비스 접속 방법
-1. 카카오페이
-- 준비: 카카오페이 API 등록
-  kakao.pay.secret_key={Secret key(dev)}
-   - 내 애플리케이션 > 애플리케이션 생성하기 -> Secret key(dev) 발급
-     kakao.pay.request.url=https://open-api.kakaopay.com/online/v1/payment/ready
-     kakao.pay.approve.url=https://open-api.kakaopay.com/online/v1/payment/approve
-- 애플리케이션 > 플랫폼 > Web > 사이트 도메인 -> 플랫폼 등록
+1. 카카오 소셜 로그인
 
+2. 네이버 소셜 로그인
 
-2. ReturnZero (STT API)
-- 준비: My 콘솔 등록
-  client-id={CLIENT ID}
-   - My 콘솔 > Console > 애플리케이션 정보 > CLIENT ID 복사
-     client-secret={CLIENT SECRET}
-   - My 콘솔 > Console > CLIENT SECRET 관리 > 발급요청
-
-
-3. coolsms (휴대폰 인증)
-- 준비: coolsms 계정 등록
-  sms-api-key={API Key}
-   - 개발 / 연동 > API Key 관리 > 새 API KEY 생성 > API Key 복사
-     sms-api-secret={API Secret}
-   - 개발 / 연동 > API Key 관리 > 새 API KEY 생성 > API Secret 키 복사
-
-
-4. Firebase (신고 기능)
-- 준비: 새 프로젝트 추가 (kppsc00 계정 로그인)
-  serviceAccountKey.json
-   - 프로젝트 개요 > 프로젝트 설정 > 서비스 계정 > 새 비공개 키 생성 후 파일 저장
+3. 구글 이메일
